--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,37 @@ ul.hs_listing li {
     margin: 0 0 10px 0;
 }
 
+.form_name {
+    text-align: right;
+}
+
+.form_button {
+    display: block;
+    margin: 0 auto;
+}
+
+label {
+    padding-right: 5px;
+}
+input[type=text] {
+    border-radius: 5px;
+    margin: 0 0 15px 0;
+}
+
+input[type=submit] {
+    margin-bottom: 15px;
+    width: 160px;
+    border-radius: 5px;
+    background-color: darkolivegreen;
+    color:blanchedalmond;
+    padding:10px;
+}
+
+input[type=submit]:hover {
+    color:darkgreen;
+    background-color: yellowgreen;
+}
+
 /*Footer*/
 
 footer {
