--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ h4 {
     font-size: 1em;
 }
 
+.content {
+    padding: 0 0 100px 0;
+}
+
 /*Content*/
 .fieldset_questions input {
     margin:10px 7px 0 0 !important;
